[package]
name = "iluvatar_finesched"
description = "HashMap interface to BPF maps"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true

[build-dependencies]
#scx_utils = { version = "1.0.7" }
scx_utils = { path = "/data2/ar/finescheduling/scx/rust/scx_utils" }

[dependencies]
# for parsing args
clap = { version = "4.1", features = ["derive", "env", "unicode", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"

# for user space side of sched process
ctrlc = { version = "3.1", features = ["termination"] }

anyhow = "1.0"
libbpf-rs = { version = "0.24.4" }
#scx_utils = { version = "1.0.7" }
scx_utils = { path = "/data2/ar/finescheduling/scx/rust/scx_utils" }


[dev-dependencies]
rstest = "0.13.0"

[features]
static = ["libbpf-rs/static"]



